# rump

./: Cargo.toml  LICENSE  PKGBUILD  README.md  rump.desktop
.github/workflows/: ci.yml
src/: audio.rs  config.rs  log.rs  main.rs  metadata.rs  pipewire.rs  ptt.rs  stream.rs  style.css
src/ui/: mod.rs  preferences.rs  state.rs  timers.rs
