[package]
name = "rump"
version = "0.1.0"
edition = "2021"
description = "Icecast streaming client with GTK4 UI"

[dependencies]
gtk4 = "0.11"
libadwaita = { version = "0.9", features = ["v1_4"] }
vorbis_rs = "0.5"
anyhow = "1"
nix = { version = "0.29", features = ["signal"] }
crossbeam-channel = "0.5"
evdev = "0.13"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
